--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@ dist/
 .pnp.js
 
 # PostgreSQL
-db.sqlite3
 .pgpass
 
 # Docker Compose volume
@@ -22,3 +21,4 @@ recipify_data/
 
 # General
 .env*
+data/
