Enabling auto rebuild when running django container
Refactor Dockerfile and .env file paths

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,10 +11,7 @@ COPY requirements.txt .
 RUN pip install -r requirements.txt
 
 # Copy project code
-COPY . .
+COPY recipify .
 
 # Expose port
 EXPOSE 8000
-
-# Run Django development server
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
