Adding Elasticsearch and Kibana with instructions

--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,10 @@ dist/
 # PostgreSQL
 .pgpass
 
-# Docker Compose volume
+# Docker Compose volumes
 recipify_data/
+es_data/
+kibana_data/
 
 # General
 .env*
