--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,8 +40,42 @@ services:
       - recipify_network
 
   # Elasticsearch service
+  elasticsearch:
+    container_name: elasticsearch
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.15.1
+    environment:
+      - cluster.name="recipify"
+      - discovery.type=single-node
+      - network.host=0.0.0.0
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - xpack.security.enabled=true
+    env_file:
+      - ./.env.es
+    volumes:
+      - ./es_data:/usr/share/elasticsearch/data
+    ports:
+      - "9200:9200"
+    networks:
+      - recipify_network
 
   # Kibana service
+  kibana:
+    container_name: kibana
+    image: docker.elastic.co/kibana/kibana:8.15.1
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+      - server.host=0.0.0.0
+      - xpack.security.enabled=false
+    env_file:
+      - ./.env.kibana
+    volumes:
+      - ./kibana_data:/usr/share/kibana/data
+    ports:
+      - "5601:5601"
+    depends_on:
+      - elasticsearch
+    networks:
+      - recipify_network
 
 networks:
   recipify_network:
