Django recipify_search application and Elasticsearch connection settings

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,11 +7,16 @@ WORKDIR /app
 # Copy requirements file
 COPY requirements.txt .
 
+# Install curl
+RUN apt-get update && apt-get install -y curl
+
 # Install dependencies
 RUN pip install -r requirements.txt
 
 # Copy project code
 COPY recipify .
+
+ENV DOCKER_ENV=True
 
 # Expose port
 EXPOSE 8000
