--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,6 @@ __pycache__/
 .venv*/
 .env/
 
-# React (Vite)
-node_modules/
-dist/
-.vite/
-.pnp.js
-
 # PostgreSQL
 .pgpass
 
@@ -26,3 +20,28 @@ kibana_data/
 data/
 data.csv
 media/
+
+# React (Vite)
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
