WSL2 specific project setup instructions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,7 +64,7 @@ services:
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
       - xpack.security.enabled=true
     env_file:
-      - ./.env.es
+      - ./.env.elasticsearch
     volumes:
       - ./es_data:/usr/share/elasticsearch/data
     ports:
