--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,17 +1,27 @@
 asgiref==3.8.1
+bleach==6.1.0
 certifi==2024.8.30
+charset-normalizer==3.3.2
 Django==5.1.1
+django-cors-headers==4.4.0
 django-elasticsearch-dsl==8.0
 django-environ==0.11.2
 djangorestframework==3.15.2
 elastic-transport==8.15.0
 elasticsearch==8.15.1
 elasticsearch-dsl==8.15.2
+idna==3.10
+kaggle==1.6.17
 pillow==10.4.0
 psycopg2-binary==2.9.9
 python-dateutil==2.9.0.post0
+python-slugify==8.0.4
+requests==2.32.3
 six==1.16.0
 sqlparse==0.5.1
+text-unidecode==1.3
+tqdm==4.66.5
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
+webencodings==0.5.1
