--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       dockerfile: Dockerfile.dev
     volumes:
       - ./frontend/recipify:/app
-      - /app/node_modules
+      # - /app/node_modules
     ports:
       - "3000:3000"
     depends_on:
