--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,17 +10,51 @@ djangorestframework==3.15.2
 elastic-transport==8.15.0
 elasticsearch==8.15.1
 elasticsearch-dsl==8.15.2
+filelock==3.16.1
+fsspec==2024.10.0
+huggingface-hub==0.26.3
 idna==3.10
+Jinja2==3.1.4
+joblib==1.4.2
 kaggle==1.6.17
+MarkupSafe==3.0.2
+mpmath==1.3.0
+networkx==3.4.2
+numpy==2.1.3
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+packaging==24.2
 pillow==10.4.0
 psycopg2-binary==2.9.9
 python-dateutil==2.9.0.post0
 python-slugify==8.0.4
+PyYAML==6.0.2
+regex==2024.11.6
 requests==2.32.3
+safetensors==0.4.5
+scikit-learn==1.5.2
+scipy==1.14.1
+sentence-transformers==3.3.1
 six==1.16.0
 sqlparse==0.5.1
+sympy==1.13.1
 text-unidecode==1.3
+threadpoolctl==3.5.0
+tokenizers==0.20.3
+torch==2.5.1
 tqdm==4.66.5
+transformers==4.46.3
+triton==3.1.0
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
