--- a/frontend/recipify/package.json
+++ b/frontend/recipify/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-switch": "^1.1.1",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.7.0",
     "react": "^18.3.1",
